--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,8 @@
 <nav>
   <ul class="header__list">
+    <li><a href="{{ '/' | prepend: site.baseurl }}">Code</a></li>
+    <!-- <li><a href="{{ '/' | prepend: site.baseurl }}">Photo</a></li> -->
+    <!-- <li><a href="{{ '/' | prepend: site.baseurl }}">Create</a></li> -->
     <li><a href="{{ '/' | prepend: site.baseurl }}">Stories</a></li>
     <li><a href="{{ '/style-guide' | prepend: site.baseurl }}">Style Guide</a></li>
     <li><span class="popup__open">Contact</span></li>
