--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
     <!-- <li><a href="{{ '/' | prepend: site.baseurl }}">Photo</a></li> -->
     <!-- <li><a href="{{ '/' | prepend: site.baseurl }}">Create</a></li> -->
     <li><a href="{{ '/' | prepend: site.baseurl }}">Stories</a></li>
-    <li><a href="{{ '/style-guide' | prepend: site.baseurl }}">Resume</a></li>
+    <li><a href="{{ '/style-guide' | prepend: site.baseurl }}">Style Guide</a></li>
     <li><span class="popup__open">Contact</span></li>
   </ul>
 </nav>
